<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/lbl_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainAct_lbl_Name"/>
    <EditText
        android:id="@+id/txt_NameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>
    <TextView
        android:id="@+id/lbl_Surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainAct_lbl_Surname"/>
    <EditText
        android:id="@+id/txt_SurnameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"/>
    <CheckBox
        android:id="@+id/cbx_ChangeGreetMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/mainAct_cbx_CasualMode"/>
    <Button
        android:id="@+id/btn_Greet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainAct_btn_Greet"/>
    <Button
        android:id="@+id/btn_Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainAct_btn_Reset"/>
    <TextView
        android:id="@+id/lbl_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>